serverSide rendering done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+/* Loader animation  */
 @keyframes ldio-9vgzudbxn8h-1 {
   0% {
     top: 36px;
