--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  font-size: 16px;
+
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -14,6 +16,27 @@ body {
   box-shadow: 0 10px 13px 2px rgb(0 20 0 / 50%);
 }
 
+/* custom card */
+.custom-card:hover h1 {
+  color: rgb(251, 255, 0);
+}
+.custom-card:hover h2 {
+  color: #0573e6;
+}
+.custom-card:hover p {
+  color: #000;
+}
+.custom-card:hover img {
+  transform: scale(1.1);
+}
+
+/* custom border  */
+.custom-border .custom-border-bottom {
+  border-bottom: 1px solid rgb(209, 202, 202);
+}
+.custom-border .custom-border-bottom:last-child {
+  border: none;
+}
 /* Loader animation  */
 @keyframes ldio-9vgzudbxn8h-1 {
   0% {
